# MasterArbeit_MLops

./: .dockerignore  .flake8  .gitattributes  .gitignore  COMPREHENSIVE_FILE_INVENTORY.md  CURRENT_STATUS.md  FEBRUARY_2026_ACTION_PLAN.md  FINAL_3_PATHWAYS_TO_COMPLETE_THESIS.md  GIT_PUSH_GUIDE.md  KEEP_Technology_Stack_Analysis.md  LEARNINGS_FROM_REFERENCE_PROJECT.md  PApers.xlsx  PROJECT_GUIDE.md  QUICKSTART.md  README.md  REPO_STRUCTURE.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_PLAN.md  THESIS_PROGRESS_ANALYSIS.md  THESIS_PROGRESS_REPORT.md  TODO_THIS_WEEK.md  Technology Stack Analysis.md  Thesis_Plan.md  WHAT_TO_DO_NEXT.md  WHERE_WE_ARE.md  WORKLOG.md  cleanup_repo.ps1  current_structure.txt  docker-compose.yml  dvc_experiments.html  fix_fstrings.py  fix_imports.py  imp.md  pyproject.toml  pytest.ini  repo_structure.txt  run_pipeline.py  setup.py  tech.md  test_results.txt  (+3 more)
02_src/: path_config.py
07_docs/: NOTEBOOK_RESTRUCTURING_COMPLETE.md  RESTRUCTURING_COMPLETE.md
22 feb codex/: THESIS_COMPLETION_AND_PIPELINE_ANALYSIS_22_FEB_2026.md
ai helps/: LATER_Offline_MLOps_Guide.md
config/: alertmanager.yml  mlflow_config.yaml  pipeline_config.yaml  pipeline_overrides.yaml  prometheus.yml  requirements-lock.txt  requirements.txt
data/: prepared.dvc  processed.dvc  raw.dvc
docker/: Dockerfile.inference  Dockerfile.training
docs/: 00_INDEX.md  ACTION_PLAN_18_20_FEB_2026.md  CONCEPTS_EXPLAINED.md  CRITICAL_MODEL_ISSUE.md  DATASET_DIFFERENCE_SUMMARY.md  DATA_LEAKAGE_CONCERN.md  DOCUMENTATION_INDEX.md  FILE_ORGANIZATION_SUMMARY.md  FRESH_START_CLEANUP_GUIDE.md  GITHUB_ACTIONS_CICD_BEGINNER_GUIDE.md  GITHUB_ACTIONS_CICD_GUIDE.md  HAR_MLOps_QnA_With_Papers.md  HOW_IT_WORKS_WITHOUT_LABELS.md  MARKDOWN_CLEANUP_GUIDE.md  MENTOR_QA_SIMPLE_WITH_PAPERS.md  MODEL_PERFORMANCE_ANALYSIS.md  PATH_COMPARISON_ANALYSIS.md  PIPELINE_DEEP_DIVE_opus.md  PIPELINE_RERUN_GUIDE.md  PIPELINE_RUNBOOK.md  PRODUCT_REVIEW.md  PROJECT_STATUS.md  README.md  REPOSITORY_CLEANUP_RECOMMENDATIONS.md  RESEARCH_PAPERS_ANALYSIS.md  RESEARCH_PAPER_INSIGHTS.md  RESTRUCTURING_SUMMARY.md  SRC_FOLDER_ANALYSIS.md  THESIS_PARAMETER_CITATIONS.md  TRIGGER_POLICY_EXPLANATION.md  UNIT_CONVERSION_SOLUTION.md  WHATS_NEXT.md  WHATS_REMAINING.md  WHY_BY_FILE.md  WHY_BY_TECH.md  WORKLOG.md  WORK_DONE_19_FEB.md  output_1801_2026-01-18.md
models/: normalized_baseline.json  pretrained.dvc  training_baseline.json
notebooks/: README.md  data_comparision_temp.ipynb  data_comparison.ipynb  production_preprocessing.ipynb
research_papers/: .gitignore  76_papers_suggestions.md  76_papers_summarizzation.md  COMPREHENSIVE_RESEARCH_PAPERS_SUMMARY.md  EHB_2025_71_extracted.txt  Final_resorecs_paper_list.xlsx  ICTH_16_extracted.txt  Research_Papers_Summary.xlsx  all_users_data_labeled.csv.dvc  anxiety_dataset.csv.dvc  papers_temp.csv  temp.ipynb
scripts/: analyze_drift_across_datasets.py  audit_artifacts.py  benchmark_latency.py  benchmark_throughput.py  build_normalized_baseline.py  build_training_baseline.py  create_normalized_baseline.py  export_mlflow_runs.py  extract_papers_to_text.py  fetch_foundation_papers.py  find_duplicate_papers.py  generate_thesis_figures.py  inference_smoke.py  per_dataset_inference.py  post_inference_monitoring.py  preprocess.py  preprocess_qc.py  regenerate_support_map.py  run_ab_comparison.py  run_tests.py  threshold_sweep.py  train.py  trigger_policy_eval.py  update_progress_dashboard.py  verify_prometheus_metrics.py  verify_repository.py  windowing_ablation.py
src/: README.md  (+25 more)
(+427 files in other folders)
